crates/relate-macros/tests/fail/invalid_default_syntax.stderr
error: Expected `;` after field mapping
  --> tests/fail/invalid_default_syntax.rs:16:20
   |
16 |         id: default: 42;
   |                    ^
